# AgentForum

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  deleteme.py  pyproject.toml
agentcache/: agents.py  chat.py  errors.py  forum.py  message_tree.py  model_wrappers.py  models.py  promises.py  storage.py  typing.py  utils.py
agentcache/ext/llms/: openai.py
agentcache/llms/: openai.py
agentforum/: conversation_tracker.py  conversations.py  errors.py  forum.py  message_placeholder.py  models.py  promises.py  storage.py  typing.py  utils.py
agentforum/_internals/: internal_promises.py
agentforum/ext/llms/: openai.py
agentforum/storage/: trees.py  trees_impl.py
agentforum/typing/: __init__.py
examples/: openai_assistant.py  plain_chatgpt.py
notebooks/: plain_chatgpt.ipynb  pprint_openai.ipynb
notebooks/internal/: openai_metadata.ipynb
tests/: conftest.py  test_agent_collab_scenarios.py  test_immutable_models.py  test_interaction_context.py  test_message_sequence.py  test_models.py  test_utils.py
tests/forum/: test_agent_collab_scenarios.py  test_agent_context.py  test_interaction_context.py
tests/models/: test_immutable.py  test_immutable_models.py  test_message.py
tests/promises/: test_message_sequence.py
