[tool.black]
line-length = 119

[tool.poetry]
name = "agentforum"
version = "0.0.6"
description = """\
An asynchronous framework for building LLM-based multi-agent systems in Python, \
with a focus on trees of immutable messages and token streaming.\
"""
authors = ["Oleksandr Tereshchenko <toporok@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = ">=2.0.0,<3.0.0"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
jupyterlab = "*"
notebook = "*"
openai = "*"
pre-commit = "*"
promptlayer = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
